# gvmpyw_final

./: .gitmodules  README.md  alpha.fits  setup.py  test.py  wrapper.cpp  wrapper.pyx
co65/: mod_in_0.fits  mod_out.fits  test.sh
co65/co65.ms/: table.f0  table.f2  table.f2_TSM1  table.f5  table.f6  table.f6_TSM0  table.f8_TSM1
co65/co65.ms/FEED/: table.f0
co65/co65.ms/FIELD/: table.f0i
co65/co65.ms/SPECTRAL_WINDOW/: table.f0i
co65/residuals.ms/: table.f1  table.f2_TSM1  table.f3  table.f3_TSM1  table.f4  table.f7  table.f7_TSM1  table.f8
co65/residuals.ms/ANTENNA/: table.f0
co65/residuals.ms/FEED/: table.f0i
co65/residuals.ms/FIELD/: table.f0
co65/residuals.ms/HISTORY/: table.f0
co65/residuals.ms/OBSERVATION/: table.f0
co65/residuals.ms/SOURCE/: table.f0  table.f0i
co65/residuals.ms/SPECTRAL_WINDOW/: table.f0
gpuvmem_mod/: CMakeLists.txt
gpuvmem_mod/include/: wraputil.cuh
gpuvmem_mod/src/: wraputil.cu
